wired up submit button to take inputs

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="row"></th>
-                        <td id=""></td>
-                        <td id=""></td>
-                        <td id=""></td>
-                        <td id=""></td>
-                        <td id=""></td>
+                        <td id="first"></td>
+                        <td id="second"></td>
+                        <td id="third"></td>
+                        <td id="fourth"></td>
+                        <td id="fifth"></td>
+                 
                         
                     </tr>
 
